src/Antlr/reactParser.java
// Generated from C:/Users/AbdRrhmanLegiom/IdeaProjects/Project_Compiler/src/Antlr/reactParser.g4 by ANTLR 4.13.1
package Antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class reactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_BRACE=1, CLOSE_BRACE=2, OPEN_PAREN=3, CLOSE_PAREN=4, OPEN_BRACKET=5, 
		CLOSE_BRACKET=6, COMMA=7, SEMICOLON=8, DOT=9, COLON=10, QUOTE=11, EQUAL=12, 
		BACK_SLASH=13, ARROW=14, OPENTAG=15, CLOSETAG=16, SLASH=17, OPERATOR=18, 
		DOLLAR=19, LOGICAL_AND=20, CLASS=21, FUNCTION=22, IMPORT=23, FROM=24, 
		EXPORT=25, IF=26, ELSE=27, FOR=28, WHILE=29, DO=30, SWITCH=31, CASE=32, 
		DEFAULT=33, RETURN=34, BREAK=35, CONTINUE=36, TRUE=37, FALSE=38, NULLL=39, 
		UNDEFINED=40, CONST=41, LET=42, VAR=43, HTTPS=44, DIV=45, SPAN=46, A=47, 
		PARAG=48, HEAD2=49, CLASSNAME=50, KEY=51, IMG=52, SRC=53, ALT=54, BUTTON=55, 
		ONCLICK=56, SHOWDETAILS=57, IDENTIFIER=58, DECIMAL_INTEGER_LITERAL=59, 
		HEX_INTEGER_LITERAL=60, OCTAL_INTEGER_LITERAL=61, BINARY_INTEGER_LITERAL=62, 
		FLOAT_LITERAL=63, STRING_LITERAL=64, TEMPLATE_LITERAL=65, LINE_COMMENT=66, 
		BLOCK_COMMENT=67, WS=68;
	public static final int
		RULE_start_compiler = 0, RULE_react_import = 1, RULE_products = 2, RULE_name = 3, 
		RULE_description = 4, RULE_image = 5, RULE_main_component = 6, RULE_body = 7, 
		RULE_equaletion = 8, RULE_equal1 = 9, RULE_equal2 = 10, RULE_function_call = 11, 
		RULE_function = 12, RULE_parameterList = 13, RULE_parameter = 14, RULE_function_body = 15, 
		RULE_statement = 16, RULE_exprStmt = 17, RULE_returnStmt = 18, RULE_expression = 19, 
		RULE_args = 20, RULE_operator = 21, RULE_ifStmt = 22, RULE_block = 23, 
		RULE_branch_component1 = 24, RULE_return = 25, RULE_jsxElement = 26, RULE_jsxSelfClosing = 27, 
		RULE_closeingt = 28, RULE_jsxElementChildren = 29, RULE_jsx11 = 30, RULE_aninnumos_function = 31, 
		RULE_jsxElementName = 32, RULE_jsxElementevents = 33, RULE_jsxAttributes = 34, 
		RULE_jsxAttribute = 35, RULE_sss = 36, RULE_exportation = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_compiler", "react_import", "products", "name", "description", 
			"image", "main_component", "body", "equaletion", "equal1", "equal2", 
			"function_call", "function", "parameterList", "parameter", "function_body", 
			"statement", "exprStmt", "returnStmt", "expression", "args", "operator", 
			"ifStmt", "block", "branch_component1", "return", "jsxElement", "jsxSelfClosing", 
			"closeingt", "jsxElementChildren", "jsx11", "aninnumos_function", "jsxElementName", 
			"jsxElementevents", "jsxAttributes", "jsxAttribute", "sss", "exportation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "';'", "'.'", 
			"':'", "'''", "'='", "'\\'", "'=>'", "'<'", "'>'", "'/'", null, "'$'", 
			"'&'", "'class'", "'function'", "'import'", "'from'", "'export'", "'if'", 
			"'else'", "'for'", "'while'", "'do'", "'switch'", "'case'", "'default'", 
			"'return'", "'break'", "'continue'", "'true'", "'false'", "'nulll'", 
			"'undefined'", "'const'", "'let'", "'var'", "'https'", "'div'", "'span'", 
			"'a'", "'p'", "'h2'", "'className'", "'key'", "'img'", "'src'", "'alt'", 
			"'button'", "'onClick'", "'Show Details'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "COMMA", "SEMICOLON", "DOT", "COLON", "QUOTE", "EQUAL", 
			"BACK_SLASH", "ARROW", "OPENTAG", "CLOSETAG", "SLASH", "OPERATOR", "DOLLAR", 
			"LOGICAL_AND", "CLASS", "FUNCTION", "IMPORT", "FROM", "EXPORT", "IF", 
			"ELSE", "FOR", "WHILE", "DO", "SWITCH", "CASE", "DEFAULT", "RETURN", 
			"BREAK", "CONTINUE", "TRUE", "FALSE", "NULLL", "UNDEFINED", "CONST", 
			"LET", "VAR", "HTTPS", "DIV", "SPAN", "A", "PARAG", "HEAD2", "CLASSNAME", 
			"KEY", "IMG", "SRC", "ALT", "BUTTON", "ONCLICK", "SHOWDETAILS", "IDENTIFIER", 
			"DECIMAL_INTEGER_LITERAL", "HEX_INTEGER_LITERAL", "OCTAL_INTEGER_LITERAL", 
			"BINARY_INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "TEMPLATE_LITERAL", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "reactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public reactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Start_compilerContext extends ParserRuleContext {
		public Main_componentContext main_component() {
			return getRuleContext(Main_componentContext.class,0);
		}
		public ExportationContext exportation() {
			return getRuleContext(ExportationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(reactParser.EOF, 0); }
		public List<React_importContext> react_import() {
			return getRuleContexts(React_importContext.class);
		}
		public React_importContext react_import(int i) {
			return getRuleContext(React_importContext.class,i);
		}
		public List<ProductsContext> products() {
			return getRuleContexts(ProductsContext.class);
		}
		public ProductsContext products(int i) {
			return getRuleContext(ProductsContext.class,i);
		}
		public Start_compilerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_compiler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterStart_compiler(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitStart_compiler(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitStart_compiler(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_compilerContext start_compiler() throws RecognitionException {
		Start_compilerContext _localctx = new Start_compilerContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_compiler);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(76);
				react_import();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82);
					products();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(87);
			main_component();
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXPORT:
				{
				setState(88);
				exportation();
				}
				break;
			case EOF:
				{
				setState(89);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class React_importContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(reactParser.IMPORT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(reactParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(reactParser.IDENTIFIER, i);
		}
		public TerminalNode COMMA() { return getToken(reactParser.COMMA, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(reactParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(reactParser.CLOSE_BRACE, 0); }
		public TerminalNode FROM() { return getToken(reactParser.FROM, 0); }
		public List<TerminalNode> QUOTE() { return getTokens(reactParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(reactParser.QUOTE, i);
		}
		public TerminalNode SEMICOLON() { return getToken(reactParser.SEMICOLON, 0); }
		public React_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_react_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterReact_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitReact_import(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitReact_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final React_importContext react_import() throws RecognitionException {
		React_importContext _localctx = new React_importContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_react_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(IMPORT);
			setState(93);
			match(IDENTIFIER);
			setState(94);
			match(COMMA);
			setState(95);
			match(OPEN_BRACE);
			setState(96);
			match(IDENTIFIER);
			setState(97);
			match(CLOSE_BRACE);
			setState(98);
			match(FROM);
			setState(99);
			match(QUOTE);
			setState(100);
			match(IDENTIFIER);
			setState(101);
			match(QUOTE);
			setState(102);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProductsContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(reactParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(reactParser.EQUAL, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(reactParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(reactParser.CLOSE_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(reactParser.SEMICOLON, 0); }
		public List<TerminalNode> OPEN_BRACE() { return getTokens(reactParser.OPEN_BRACE); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(reactParser.OPEN_BRACE, i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(reactParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(reactParser.COMMA, i);
		}
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public List<ImageContext> image() {
			return getRuleContexts(ImageContext.class);
		}
		public ImageContext image(int i) {
			return getRuleContext(ImageContext.class,i);
		}
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(reactParser.CLOSE_BRACE); }
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(reactParser.CLOSE_BRACE, i);
		}
		public TerminalNode CONST() { return getToken(reactParser.CONST, 0); }
		public TerminalNode LET() { return getToken(reactParser.LET, 0); }
		public TerminalNode VAR() { return getToken(reactParser.VAR, 0); }
		public List<Equal2Context> equal2() {
			return getRuleContexts(Equal2Context.class);
		}
		public Equal2Context equal2(int i) {
			return getRuleContext(Equal2Context.class,i);
		}
		public ProductsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_products; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterProducts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitProducts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitProducts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductsContext products() throws RecognitionException {
		ProductsContext _localctx = new ProductsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_products);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) {
				{
				setState(104);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(107);
			match(IDENTIFIER);
			setState(108);
			match(EQUAL);
			setState(109);
			match(OPEN_BRACKET);
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				match(OPEN_BRACE);
				setState(111);
				name();
				setState(112);
				match(COMMA);
				setState(113);
				description();
				setState(114);
				match(COMMA);
				setState(115);
				image();
				setState(116);
				match(COMMA);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) {
					{
					setState(117);
					equal2();
					}
				}

				setState(120);
				match(COMMA);
				setState(121);
				match(CLOSE_BRACE);
				setState(122);
				match(COMMA);
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPEN_BRACE );
			setState(128);
			match(CLOSE_BRACKET);
			setState(129);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(reactParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(reactParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(reactParser.STRING_LITERAL, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(IDENTIFIER);
			setState(132);
			match(COLON);
			setState(133);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(reactParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(reactParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(reactParser.STRING_LITERAL, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			setState(136);
			match(COLON);
			setState(137);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImageContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(reactParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(reactParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(reactParser.STRING_LITERAL, 0); }
		public ImageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_image; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterImage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitImage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitImage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImageContext image() throws RecognitionException {
		ImageContext _localctx = new ImageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_image);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(IDENTIFIER);
			setState(140);
			match(COLON);
			setState(141);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_componentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(reactParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(reactParser.EQUAL, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(reactParser.OPEN_PAREN, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(reactParser.CLOSE_PAREN, 0); }
		public TerminalNode ARROW() { return getToken(reactParser.ARROW, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(reactParser.OPEN_BRACE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(reactParser.CLOSE_BRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(reactParser.SEMICOLON, 0); }
		public TerminalNode CONST() { return getToken(reactParser.CONST, 0); }
		public TerminalNode LET() { return getToken(reactParser.LET, 0); }
		public TerminalNode VAR() { return getToken(reactParser.VAR, 0); }
		public Main_componentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterMain_component(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitMain_component(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitMain_component(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_componentContext main_component() throws RecognitionException {
		Main_componentContext _localctx = new Main_componentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_main_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) {
				{
				setState(143);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(146);
			match(IDENTIFIER);
			setState(147);
			match(EQUAL);
			setState(148);
			match(OPEN_PAREN);
			setState(149);
			match(CLOSE_PAREN);
			setState(150);
			match(ARROW);
			setState(151);
			match(OPEN_BRACE);
			setState(152);
			body();
			setState(153);
			return_();
			setState(154);
			match(CLOSE_BRACE);
			setState(155);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public Branch_component1Context branch_component1() {
			return getRuleContext(Branch_component1Context.class,0);
		}
		public List<EqualetionContext> equaletion() {
			return getRuleContexts(EqualetionContext.class);
		}
		public EqualetionContext equaletion(int i) {
			return getRuleContext(EqualetionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof reactParserListener ) ((reactParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof reactParserVisitor ) return ((reactParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}
